--- a/src/components/CategoryForm/style.module.css
+++ b/src/components/CategoryForm/style.module.css
@@ -9,28 +9,37 @@
   justify-content: start;
   flex-direction: column;
   gap: 20px;
+  margin-bottom: 40px;
 }
 
 .category__label {
   display: flex;
   flex-direction: column;
+  align-items: center;
   gap: 10px;
   font-size: 20px;
   font-weight: 600;
+  max-width: 400px;
+  width: 100%;
+  margin: 0 auto;
 }
 
-.category__label:nth-child(2) {
-  margin-bottom: 40px;
-}
+
 
 .category__input {
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   transition: all 0.3s ease;
   font-size: 18px;
   font-weight: 400;
+}
+
+.category__file {
+  height: 400px;
+  text-align: center;
 }
 
 .category__input:focus {
@@ -61,9 +70,10 @@
 }
 
 .category__image {
-  width: 200px;
-  height: max-content;
-  object-fit: contain;
+  max-width: 400px;
+  height: 400px;
+  width: 100%;
+  object-fit: scale-down;
   border: 1px solid black;
   border-radius: 4px;
 }
@@ -72,7 +82,8 @@
   padding: 10px;
   border: 1px solid #ccc;
   border-radius: 5px;
-  width: 400px;
+  max-width: 400px;
+  width: 100%;
   transition: all 0.3s ease;
   font-size: 18px;
   font-weight: 400;
